# pytrebuchet

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  linter.yml  tests.yml
dev/: formatter.py  generate_documentation.py
docs/: Makefile  make.bat
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  introduction.rst  license.rst  support_and_contact.rst
docs/source/examples/: drag_coefficient.ipynb  hcw_trebuchet_launch.ipynb  plot_initial_position.ipynb  whipper_trebuchet_launch.ipynb
docs/source/examples/motion_equations_derivation/: constraints.ipynb  projectile_motion.ipynb
docs/source/examples/parameter_studies/: hcw_arm_length.ipynb
examples/: drag_coefficient.ipynb  drag_coefficient_smooth_sphere.ipynb  hcw_trebuchet_launch.ipynb  optimize_release_angle.ipynb  optimize_trebuchet.ipynb  plot_initial_position.ipynb  trebuchet_simulation.ipynb  whipper_simulation.ipynb  whipper_trebuchet_launch.ipynb
examples/derive_equations/: constraints.ipynb  projectile_motion.ipynb
examples/motion_equations_derivation/: constraints.ipynb  projectile_motion.ipynb
examples/parameter_studies/: arm_lengths.ipynb  hcw_arm_length.ipynb
src/: __init__.py  custom_warnings.py  drag_coefficient.py  environment.py  physical_constants.py  projectile.py  simulation.py  trebuchet.py
src/differential_equations/: __init__.py  ballistic_phase.py  sling_phase.py
src/plotting/: __init__.py  initial_position.py  launch.py
src/pytrebuchet/: __init__.py  constants.py  custom_warnings.py  drag_coefficient.py  environment.py  optimization.py  physical_constants.py  plotting.py  projectile.py  simulation.py  trebuchet.py
src/pytrebuchet/differential_equations/: __init__.py  ballistic_phase.py  free_flight_phase.py  sliding_phase.py  sling_phase.py  whipper_both_constrained_phase.py  whipper_projectile_constrained_phase.py
src/pytrebuchet/plotting/: initial_position.py  launch.py
src/pytrebuchet/ui/: __init__.py  main.py  qt_type_hints.py
src/pytrebuchet/ui/domain/: __init__.py  projects.py  session.py
src/pytrebuchet/ui/models/: __init__.py  projects.py  session.py
src/pytrebuchet/ui/widgets/: __init__.py  main_menu.py  main_window.py
src/pytrebuchet/ui/widgets/file/: __init__.py  new_project_dialog.py
src/pytrebuchet/utilities/: __init__.py  logging.py  paths.py
tests/: test_drag_coefficient.py  test_environment.py  test_optimization.py  test_projectile.py  test_simulation.py  test_trebuchet.py
tests/plotting/: test_initial_position.py  test_launch.py
