[build-system]
requires = ["setuptools >= 66.0.0",
            "wheel",
            ]

[project]
name = "pytrebuchet"
version = "0.1.0"
description = "A Python library for simulating trebuchet physics"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Ben Van Bavel"}
]
keywords = ["trebuchet", "simulation", "physics"]

classifiers = [
    "Intended Audience :: Science/Research",
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=25.9.0",
    "isort>=7.0.0",
    "ruff>=0.14.4",
    "sphinx>=8.2.3",
    "sphinx_rtd_theme>=3.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/benvb-97/pytrebuchet"
Repository = "https://github.com/benvb-97/pytrebuchet"