[build-system]
requires = ["setuptools >= 66.0.0",
            "wheel",
            ]

[project]
name = "pytrebuchet"
version = "0.1.0"
description = "A Python package to simulate trebuchet mechanics."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Ben Van Bavel"},
]

keywords = ["trebuchet", "simulation", "physics"]

classifiers = [
    "Intended Audience :: Science/Research",
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "matplotlib>=3.10.7",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "mypy>=1.19.1",
    "sphinx>=9.1.0",
    "nbsphinx>=0.9.8",
    "jupyter>=1.1.1",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
select = ["ALL"]
extend-exclude = [
    "docs",
]
extend-ignore = [
    "D203",  # 1 blank line required before class docstring, conflicts with D202
    "D213",  # Multi-line docstring summary should start at the second line, conflicts with D212
    "COM812",  # Missing trailing comma in a multi-line collection, conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["I001",  # Ignore unsorted imports in example files
                "T201",  # Ignore print statements in example files
                "FBT003",  # Ignore positional boolean in example files
                "N803", "N806",  # Uppercase argument/variable in example files
                ]
"tests/*" = ["S101",  # Ignore use of assert in test files
             "PLR2004",  # Ignore magic number violations in test files
             "INP001",  # Ignore implicit namespace packages in test files
             "SLF001",  # Ignore private member access in test files
             ]

[tool.ruff.lint.pylint]
max-args = 7  # Increase the maximum number of arguments allowed in a function

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/benvb-97/pytrebuchet"
Repository = "https://github.com/benvb-97/pytrebuchet"
